SFDM-3976 Во всех методах CX-service отменить связь с product (либо сделать необязательным фильтром)
GET /api-gateway/cx/v1/bi/find теперь возвращает все BI, прошедшие
текстовый/статусный/draft-фильтр, без учёта прав (DESIGN_ARTIFACT) и
списка продуктов вызывающего пользователя. id_product остаётся как
опциональный явный фильтр запроса.